--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^0.3.4",
     "core-js": "^3.4.3",
+    "firebase": "^7.5.2",
     "vue": "^2.6.10"
   },
   "devDependencies": {
